test/Tests/Module/SameStageSameName.golden

test\Tests\Module\SameStageSameName.hs:27:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
27 |   entryPoint @"main" @Vertex   do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:27:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
27 |   entryPoint @"main" @Vertex   do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:27:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
27 |   entryPoint @"main" @Vertex   do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:28:5: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the first argument of `(=<<)', namely `put @"out"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
28 |     put @"out" =<< get @"in"
   |     ^^^^^^^^^^

test\Tests\Module\SameStageSameName.hs:28:5: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the first argument of `(=<<)', namely `put @"out"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
28 |     put @"out" =<< get @"in"
   |     ^^^^^^^^^^

test\Tests\Module\SameStageSameName.hs:28:20: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the second argument of `(=<<)', namely `get @"in"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
28 |     put @"out" =<< get @"in"
   |                    ^^^^^^^^^

test\Tests\Module\SameStageSameName.hs:29:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
29 |   entryPoint @"main" @Vertex do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:29:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
29 |   entryPoint @"main" @Vertex do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:29:3: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In a stmt of a 'do' block:
        entryPoint @"main" @Vertex do put @"out" =<< get @"in"
      In the first argument of `Program', namely
        `do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
            entryPoint @"main" @Vertex do put @"out" =<< get @"in"'
      In the expression:
        Program
          do entryPoint @"main" @Vertex do put @"out" =<< get @"in"
             entryPoint @"main" @Vertex do put @"out" =<< get @"in"
   |
29 |   entryPoint @"main" @Vertex do
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\Module\SameStageSameName.hs:30:5: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the first argument of `(=<<)', namely `put @"out"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
30 |     put @"out" =<< get @"in"
   |     ^^^^^^^^^^

test\Tests\Module\SameStageSameName.hs:30:5: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the first argument of `(=<<)', namely `put @"out"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
30 |     put @"out" =<< get @"in"
   |     ^^^^^^^^^^

test\Tests\Module\SameStageSameName.hs:30:20: error:
    * 'entryPoint': duplicate entry point declaration.
      There already exists a Vertex shader named "main".
    * In the second argument of `(=<<)', namely `get @"in"'
      In a stmt of a 'do' block: put @"out" =<< get @"in"
      In the third argument of `entryPoint', namely
        `do put @"out" =<< get @"in"'
   |
30 |     put @"out" =<< get @"in"
   |                    ^^^^^^^^^
